# MinecraftRemakeCPP_DiplomskaNaloga

./: MinecraftRemakeCpp.sln  Scope.vcxproj  Scope.vcxproj.filters
Assets/Shaders/: BasicShader.frag  BasicShader.vert  LightShader.vert  ShaderGUI.frag  ShaderGUI.vert
Minecraf.c8d46486/x64/Debug/: MinecraftCloneCpp.exe.recipe  MinecraftRemakeCpp.exe.recipe  Scope.vcxproj.FileListAbsolute.txt  Scope.vcxproj.cppwinrt_comp.rsp  Scope.vcxproj.cppwinrt_plat.rsp  Scope.vcxproj.mdmerge.rsp  vc143.idb
Minecraf.c8d46486/x64/Debug/Minecraf.c8d46486.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  MinecraftRemakeCpp.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
OGL3D/SimplexNoise/: README.md  appveyor.yml  build.bat
OGL3D/glm/: CMakeLists.txt
OGL3D/include/OGL3D/: OPrerequisites.h
OGL3D/include/OGL3D/Game/: OGame.h
OGL3D/include/OGL3D/Graphics/: OGraphicsEngine.h  OShaderProgram.h  OUniformBuffer.h  OVertexArrayObject.h
OGL3D/include/OGL3D/InputSystem/: OInputListener.h  OInputSystem.h
OGL3D/include/OGL3D/Math/: OMat4.h  ONoise.h  OPoint.h  ORect.h  OVec2.h  OVec3.h  OVec4.h
OGL3D/include/OGL3D/Minecraft/: BiomeAttributes.h  BlockType.h  Chunk.h  Player.h  World.h  WorldData.h
OGL3D/include/OGL3D/Time/: OTime.h
OGL3D/include/OGL3D/Window/: OWindow.h
OGL3D/source/OGL3D/Game/: OGame.cpp
Scope/x64/Debug/: Scope.exe.recipe  Scope.vcxproj.FileListAbsolute.txt  Scope.vcxproj.cppwinrt_comp.rsp  Scope.vcxproj.cppwinrt_plat.rsp  Scope.vcxproj.mdmerge.rsp  vc143.idb
main/: main.cpp
(+21 files in other folders)
